text alignment fixes for #102 (#108)

--- a/src/scss/default.scss
+++ b/src/scss/default.scss
@@ -13,6 +13,7 @@
 @include borders-class-export;
 @include position-class-export;
 @include hidden-class-export;
+@include text-pull-class-export;
 @include text-align-class-export;
 @include gray-color-class-export;
 @include brand-color-class-export;
